Cannot close Calendar Event Notification dialog (the dialog no longer have the normal window controls)
Categories
(Calendar :: General, defect)
Tracking
(thunderbird_esr102 unaffected, thunderbird112 affected)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | unaffected |
thunderbird112 | --- | affected |
People
(Reporter: KaiE, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
Thunderbird Daily:
I was reminded about a calendar event. The dialog had buttons to dismiss the events. But the dialog had just a plain border, there were none of the usual default window controls to close the dialog.
When I pressed Alt-F4 for fun the whole Thunderbird application quit.
Expected: Allow me to close that popup window.
Comment 1•2 years ago
|
||
I can confirm. No window controls or normal window top at all on that dialog on daily.
STR: create an event with reminder and wait for the reminder to pop up. The reminder "window" doesn't look like a window at all.
Alice, could you check what regressed this?
Comment 2•2 years ago
|
||
WFM on Thunderbird Daily 112.0a1 (BuildID=20230305102634).
Comment hidden (off-topic) |
Comment 4•2 years ago
|
||
Strange, I still see it on linux. Maybe something to do the desktop environment then.
Comment 5•2 years ago
|
||
For clarity, the green window bar in the screenshot is missing for me.
Comment 6•2 years ago
|
||
Hum, I cannot reproduce the issue on Windows11 too....
Comment 7•2 years ago
|
||
Here's what I'm seeing
Comment 8•2 years ago
|
||
Finally, I was able to reproduce this issue on Ubuntu20.04(VMWare guest).
So, this seems to be linux
only problem.
Regression window:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=2c41c52ca7ccbfe13d1af58a482271ace0f7e45f&tochange=83d14f11a010932a168f25488e794ad5c6f17d12
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bc3bdd8c19f8474d702689e870db815199d70e9e&tochange=0e5bee0c373f5fe88ef77226c212242f683b1db8
Suspect: Bug 1794577. Tentatively, mark this as regressor.
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Reporter | ||
Comment 10•2 years ago
|
||
At least for me, I found a workaround.
That notification is an independent window with its own entry in my task bar.
That means I can click that task bar entry to minimize/hide the window.
Assignee | ||
Comment 11•2 years ago
|
||
How is this window open?
Assignee | ||
Comment 12•2 years ago
|
||
We're probably hitting this case but seems like you're opening a popup and expect it to be decorated which is really weird. Would be better to open it as a toplevel window or so?
Comment 13•2 years ago
|
||
It's calendar-alarm-dialog.xhtml.
You can reproduce the error by running
Services.ww.openWindow(
null,
"chrome://calendar/content/calendar-alarm-dialog.xhtml",
"_blank",
"chrome,dialog=yes,all,resizable",
this
);
Updated•2 years ago
|
Assignee | ||
Comment 15•2 years ago
|
||
Bug 1823350 will likely fix this.
Comment 16•2 years ago
|
||
Bug still present after bug Bug 1823350. (I think not wayland?)
Comment 17•2 years ago
|
||
Passing null instead of "this" for the last argument (comment 13) makes the controls show up. Though I'd think there is still a bug here.
Assignee | ||
Comment 18•2 years ago
|
||
Bug 1794577 made this visible but the bug was really introduced in
bug 1816436.
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Comment 20•2 years ago
|
||
bugherder |
Description
•