Bug 1820203 - Don't consider dialogs with BorderStyle::{Default,All} as undecorated. r=stransky

Bug 1794577 made this visible but the bug was really introduced in
bug 1816436.

Differential Revision: https://phabricator.services.mozilla.com/D173428